Fix word-break position and better look on small screens.

--- a/source/stylesheets/modules/_title.sass
+++ b/source/stylesheets/modules/_title.sass
@@ -13,3 +13,4 @@
 
 .title--home-link__alt
   color: $title-color-2
+  display: inline-block
